--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,23 @@
 os:
   - linux
 
+env:
+  - ELECTRON_VERSION=1.3.1
+  - ELECTRON_VERSION=1.3.5
+
 sudo: false
 
 language: node_js
 node_js:
   - "6.4.0"
+
+install:
+  - npm install
+  - npm uninstall electron
+  - npm install electron@$ELECTRON_VERSION
+
+before_script:
+  - export DISPLAY=:99.0; sh -e /etc/init.d/xvfb start
 
 script:
   - npm run lint
