--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-cli": "^6.14.0",
     "babel-preset-es2015": "^6.14.0",
     "chai": "^3.5.0",
+    "electron": "^1.3.5",
     "electron-mocha": "^3.0.5",
     "eslint": "^3.4.0",
     "eslint-config-airbnb-base": "^5.0.3",
