--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ os:
   - linux
 
 env:
-  - ELECTRON_VERSION=1.3.1
-  - ELECTRON_VERSION=1.3.5
+  - TEST_ENV=main
+  - TEST_ENV=renderer
 
 sudo: false
 
@@ -14,15 +14,13 @@ node_js:
 
 install:
   - npm install
-  - npm uninstall electron
-  - npm install electron@$ELECTRON_VERSION
 
 before_script:
   - export DISPLAY=:99.0; sh -e /etc/init.d/xvfb start
 
 script:
   - npm run lint
-  - npm run test
+  - npm run test-$TEST_ENV
 
 notifications:
   email: false
